# cpp_screener

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SPECS_v1.0.md  SPECS_v2.0.md  SPECS_v3.9.md  pnpm-lock.yaml  pnpm-workspace.yaml  run.sh
.agents/api-design/: SKILL.md
.agents/architecture/: SKILL.md
.agents/codebase-map/: SKILL.md
.agents/decisions-log/: SKILL.md
.agents/errors-and-observability/: SKILL.md
.agents/prisma-ui/: SKILL.md
.agents/testing/: SKILL.md
.agents/third-party-integrations/: SKILL.md
config/: clusters.yaml  config.yaml  screens.yaml
include/trader/broker/: broker_adapter.hpp  saxo_adapter.hpp
include/trader/core/: alert_dispatcher.hpp  circular_buffer.hpp  position_manager.hpp  regime_classifier.hpp  sr_provider.hpp  telegram.hpp  types.hpp
include/trader/persistence/: sqlite_store.hpp
include/trader/screens/: screen.hpp  screen_a.hpp  screen_b.hpp  screen_c.hpp  screen_d.hpp  screen_e.hpp  screen_f.hpp  screen_g.hpp
include/trader/storage/: time_series_store.hpp  token_store.hpp
include/trader/web/: http_server.hpp
src/: main.cpp
src/broker/: saxo_adapter.cpp
src/core/: alert_dispatcher.cpp  position_manager.cpp  regime_classifier.cpp  sr_provider.cpp  telegram.cpp
src/persistence/: sqlite_store.cpp
src/screens/: screen_a.cpp  screen_b.cpp  screen_c.cpp  screen_d.cpp  screen_e.cpp  screen_f.cpp  screen_g.cpp
src/storage/: time_series_store.cpp  token_store.cpp
src/web/: http_server.cpp
tests/: test_harness.hpp  test_runner.cpp  test_screener.cpp
ui/: package.json
ui/src/: App.tsx  index.css
whatsapp-bot/: .gitignore  package.json  tsconfig.json
whatsapp-bot/src/: main.ts
